updated layout and colors, fixed spacing in code

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,45 +1,65 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 body {
-  font-size: 120%;
+  font-size: 16px;
   font-family: Arial;
+  background-color: #f7fafc;
 }
 
 button, input {
-  font-size: 100%;
+  font-size: 1em;
   font-family: Arial;
+}
+
+form {
+  margin-top: 25px;
+}
+
+label {
+  font-weight: 900;
+}
+
+input {
+  border: 2px solid transparent;
+  border-radius: 6px;
+  padding: 0.4em 0.8em;
+  background-color: #e2e8f0;
+}
+
+input:focus {
+  background-color: #ffffff;
+  border: 2px solid #cbd5e0;
+  outline: 0;
+}
+
+button:active {
+  box-shadow: none;
+  transform: translateY(3px);
 }
 
 table {
   width: 100%;
 }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-
 .error {
   color: red;
 }
 
+.navbar-brand {
+  margin-left: 485px;
+}
+  
+
 .wrapper {
   margin: 0 auto;
-  max-width: 825px;
+  max-width: 800px;
   text-align: center;
 }
 
 .total {
   font-size: 150%;
-  text-decoration: underline;
-}
-
-.form {
-  margin-top: 25px;
-  width: 100%;
 }
 
 .transactions {
@@ -49,3 +69,8 @@ tr:nth-child(even) {
   width: 90%;
   margin: 0 auto;
 }
+
+.transaction-buttons {
+  margin-top: 25px;
+}
+
